--- a/assignment3/export csv.ipynb
+++ b/assignment3/export csv.ipynb
@@ -47,6 +47,7 @@
     "# Create dataframe\n",
     "df = pd.DataFrame(dicts)\n",
     "df.drop_duplicates(inplace=True)\n",
+    "df.reset_index(drop=True, inplace=True)\n",
     "\n",
     "# Save to csv\n",
     "df.to_csv(\"reviews.csv\")"
