--- a/assignment3/export csv.ipynb
+++ b/assignment3/export csv.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "    for name in files\n",
     "    if not name.startswith('.')  # ignore hidden files\n",
     "    and not name.endswith(('crc', 'json', 'csv'))  \n",
-    "    and not os.path.abspath(name).endswith('_SUCCESS')  # exclude SUCCESS\n",
+    "    and not name.endswith('_SUCCESS')  # exclude SUCCESS\n",
     "]\n",
     "\n",
     "# Load the contents and append to a list\n",
