--- a/assignment3/export csv.ipynb
+++ b/assignment3/export csv.ipynb
@@ -14,11 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/Users/anhphuong/Documents/KUL/Advanced\\ Analytics\"\n",
+    "# Change this path to the folder that contains subfolders of streaming content\n",
+    "path = \"/Users/anhphuong/Documents/KUL/Advanced\\ Analytics\" \n",
     "\n",
     "def is_valid_json(s):\n",
     "    try:\n",
@@ -55,22 +56,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "162"
+       "253"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8412017167381974"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.label.mean()"
    ]
   },
   {
